--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -10,11 +10,31 @@
 
 	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
-    <script type="text/javascript" >
-        var user = '{{ reqeust.user }}'
+     <script type="text/javascript" src={% static 'js/cart.js' %}>
+        var user = "{{ reqeust.user }}"
+
+        //create CSRF token in JS, copy from django documentation
+        function getCookie(name) {
+            let cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                const cookies = document.cookie.split(';');
+                for (let i = 0; i < cookies.length; i++) {
+                    const cookie = cookies[i].trim();
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+            }
+        }
+    }return cookieValue;
+    }
+    const csrftoken = getCookie('csrftoken');
+
     </script>
 
-    TESTING USER NAME hello, {{ reqeust.user }}
+    TESTING USER NAME: hello, {{ request.user }}!
+
+
 </head>
 <body>
 
@@ -59,8 +79,6 @@
 
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src={% static 'js/cart.js' %}>
-        var user = "{{ reqeust.user }}"
-    </script>
+
 </body>
 </html>
