--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -10,27 +10,28 @@
 
 	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
-     <script type="text/javascript" src={% static 'js/cart.js' %}>
-        var user = "{{ reqeust.user }}"
+    <script type="text/javascript" >
 
         //create CSRF token in JS, copy from django documentation
         function getCookie(name) {
-            let cookieValue = null;
-            if (document.cookie && document.cookie !== '') {
-                const cookies = document.cookie.split(';');
-                for (let i = 0; i < cookies.length; i++) {
-                    const cookie = cookies[i].trim();
-                    // Does this cookie string begin with the name we want?
-                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                        break;
+    let cookieValue = null;
+    if (document.cookie && document.cookie !== '') {
+        const cookies = document.cookie.split(';');
+        for (let i = 0; i < cookies.length; i++) {
+            const cookie = cookies[i].trim();
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
             }
         }
-    }return cookieValue;
     }
-    const csrftoken = getCookie('csrftoken');
+    return cookieValue;
+}
+const csrftoken = getCookie('csrftoken');
 
     </script>
+    <input type="hidden" id="myVar" name="variable" value="{{ request.user }}">
 
     TESTING USER NAME: hello, {{ request.user }}!
 
@@ -79,6 +80,8 @@
 
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
+    <script type="text/javascript" src={% static 'js/cart.js' %}>
 
+    </script>
 </body>
 </html>
